# bam-to-splat

./: CMakeLists.txt
src/: main.cpp
